--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,20 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/events?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
+# Configuration de la base de données
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto=update
-
-
 spring.jpa.show-sql=true
 
-paypal.client.id=AREoFwqM5TcvihtjQe3nFrAcAnDdsi-9o_5LEIYGd2AvREalc2-eSGKd5NSx0IKCY5he4ooCzBUSv67W
-paypal.client.secret=EHs1c3F2ck7ouzjbvK3NGd-A6CJav8e6erORoMlNO_QbQS8fhKAbfwA5DE1XS_pgAsTQSSiHt_rd7GgM
-paypal.mode=sandbox
+# Configuration PayPal
+paypal.client.id=${PAYPAL_CLIENT_ID}
+paypal.client.secret=${PAYPAL_CLIENT_SECRET}
+paypal.mode=${PAYPAL_MODE}
 
+# Configuration Mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=fari.elayy@gmail.com
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
